<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ntrip_ros</name>
  <version>0.0.1</version>
  <description>The ntrip_ros package</description>
  <maintainer email="tilk@tilk.eu">tilk</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rtcm_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
